fix horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,6 +250,7 @@ h6 {
     transition: all 0.5s;
     z-index: 997;
     height: 70px;
+    overflow: hidden;
 }
 
 @media (max-width: 992px) {
